fix Horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@
   font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
-  margin-top: 120px;
+  margin-top: 52px;
   font-size: 46px;
   line-height: 64px;
   letter-spacing: 0.37px;
@@ -221,8 +221,8 @@
 
 .littleParagraph {
   font-style: normal;
-  font-size: 14px;
-  margin-top: 4px;
+  font-size: 16px;
+  margin-top: 14px;
   font-weight: 400;
   line-height: 24px;
   padding: 0 24px 0 24px;
@@ -235,9 +235,9 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  gap: 16px;
+  gap: 24px;
   list-style: none;
-  margin-left: 24px;
+  margin-left: 22px;
   margin-top: 4px;
   width: 200px;
   height: 40px;
@@ -284,7 +284,7 @@
 }
 
 .AboutLine1 {
-  width: 90%;
+  width: 100%;
   top: 830px;
   position: absolute;
   border: 1px solid #212121;
@@ -650,16 +650,19 @@
 }
 
 .AboutLine2 {
-  width: 100%;
+  width: 95%;
   top: 700px;
   position: absolute;
   border: 1px solid #fff;
   align-items: center;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .MySkills {
   width: 100%;
   margin-top: 226px;
+  margin-left: 0;
   color: #fff;
   text-align: center;
 }
@@ -989,7 +992,7 @@ input#Name {
     padding: 6px 24px 0 142px;
     font-family: "Poppins", sans-serif;
     color: #fff;
-    margin-top: 12px;
+    margin-top: 14px;
   }
 
   .connectIcons {
